--- a/Android_Demo/chatJiQIRen/智能机器人聊天.md
+++ b/Android_Demo/chatJiQIRen/智能机器人聊天.md
@@ -202,6 +202,7 @@ ListView绑定适配器，并且实现数据的解析
 
  ```
  3. 解析API数据，与RxVolly结合使用
+ 添加依赖条件：compile 'com.kymjs.rxvolley:rxvolley:1.1.4'
  ```java
      public void JsonData(String t) {
         try {
