--- a/Android_Demo/WeChatNews/微信精选推送.md
+++ b/Android_Demo/WeChatNews/微信精选推送.md
@@ -143,8 +143,9 @@ public class MainActivity extends AppCompatActivity {
     private void getDataFromNet() {
 
         mlistview=(ListView)findViewById(R.id.mlistView);
-        String url="http://v.juhe.cn/weixin/query?key=7f8ce5e600d72c58d504eaf1d3c428c9"+"&ps=100";
-        RxVolley.get(url, new HttpCallback() {
+        String url="http://v.juhe.cn/weixin/query?key=7f8ce5e600d72c58d504eaf1d3c428c9"+"&ps=100";
+        //compile 'com.kymjs.rxvolley:rxvolley:1.1.4'
+        RxVolley.get(url, new HttpCallback() {
             @Override
             public void onSuccess(String t) {
                 JsonData(t);
