--- a/basePoints/Service/3.服务和活动的通信(bind&unbind).md
+++ b/basePoints/Service/3.服务和活动的通信(bind&unbind).md
@@ -2,7 +2,7 @@
 2. 以一个下载功能为例
 
 在服务里创建一个下载的binder对象，用其管理服务的活动
-```
+```java
 public class downService extends Service {
     public downLoadBinder mDownLoadBinder=new downLoadBinder();
     public static final String TAG="downLoadService";
@@ -48,7 +48,7 @@ public class downService extends Service {
 ```
 接下来在Activity中与服务进行通信，这样这个活动可以实现下载功能。
 
-```
+```java
 public class Service1Activity extends AppCompatActivity implements View.OnClickListener {
 
     //获取服务的binder对象
@@ -103,7 +103,7 @@ public class Service1Activity extends AppCompatActivity implements View.OnClickL
 
 Logcat日志打印结果：
 点击bindService时就先创建服务，因为这时候服务还没创建。接下来就开始下载。点击onbindService时就会销毁服务，断开连接。当再次连接服务时就会再次创建服务。
-```
+```java
 06-27 10:39:04.782 7737-7737/com.example.apple.service D/downLoadService: onCreate myservice
 06-27 10:39:04.787 7737-7737/com.example.apple.service D/downLoadService: startDownLoad myservice
 06-27 10:39:04.787 7737-7737/com.example.apple.service D/downLoadService: getProgress myservice
