--- a/basePoints/Service/1.Service的创建启动和停止.md
+++ b/basePoints/Service/1.Service的创建启动和停止.md
@@ -2,7 +2,7 @@
 2.没创建一个服务都会调用onCreate(),onStartCommand()方法，但是当一直启动服务，并且次数增加时，就会只调用onStartCommand()方法了，服务的停止调用onDestory()方法，停止后启动服务仍会调用onCreate(),onStartCommand()方法。
 下面通过打印日志查看服务的创建启动停止过程。
 
-```
+```java
 package com.example.apple.service.service;
 
 import android.app.Service;
@@ -45,7 +45,7 @@ public class MyService extends Service {
 
 MainActivity.class:
 
-```
+```java
 public class MainActivity extends AppCompatActivity implements View.OnClickListener {
     private Button btn_start;
     private Button btn_stop;
@@ -83,7 +83,7 @@ public class MainActivity extends AppCompatActivity implements View.OnClickListe
 
 Logcat打印日志：
 
-```
+```java
 06-27 09:08:04.023 2544-2544/com.example.apple.service D/MyService: onCreate myService
 06-27 09:08:04.025 2544-2544/com.example.apple.service D/MyService: onStartCommand myService
 06-27 09:08:07.586 2544-2544/com.example.apple.service D/MyService: onDestroy myService
