--- a/basePoints/Service/2.服务的生命周期.md
+++ b/basePoints/Service/2.服务的生命周期.md
@@ -10,3 +10,5 @@ startService(new Intent(this, MyService.class));
 3. 虽然每调用一次startSerivce()方法，startCommand方法就会被调用，但是只存在一个服务的实例，不管调用多少次startSerivce()方法，只需一次stopService()或stopSelf方法服务就停止了。
 4. 调用Context里面的bindService方法可以使活动和服务进行通信，这会回调服务中的onBind()方法，返回binder实例。
 5. 调用startService（）再调用stopService（）方法，会使onDestory（）方法得到执行，销毁服务。而使用bindService（）后再使用unbindService（）方法，也会使onDestory（）方法得到执行。当既调用了startService（）又调用了bindService（）则stopService（）和unbindService（）都要调用。
+6. 启动服务：创建->启动->销毁，如果服务已经创建了，后续重复启动，操作的都是同一个服务，不会再重新创建了，除非先销毁它
+7. 服务的生命周期和活动的生命周期没有关系，Activity的生命周期结束了，服务还可以在后台运行，除非是我们自己将服务关闭。
