--- a/basePoints/Service/3.服务和活动的通信(bind&unbind).md
+++ b/basePoints/Service/3.服务和活动的通信(bind&unbind).md
@@ -77,6 +77,7 @@ public class Service1Activity extends AppCompatActivity implements View.OnClickL
                 break;
             case R.id.unbind_service:
                 unbindService(connection);
+                //解绑服务的时候要指明是哪一个connection，所以必须是和bind相同的connection，所以connection应该生命为全局变量。
         }
     }
 //ServiceConnection里面的两个方法是用于活动与服务绑定成功与连接断开的时候使用。
