--- a/basePoints/Service/2.服务的生命周期.md
+++ b/basePoints/Service/2.服务的生命周期.md
@@ -12,3 +12,7 @@ startService(new Intent(this, MyService.class));
 5. 调用startService（）再调用stopService（）方法，会使onDestory（）方法得到执行，销毁服务。而使用bindService（）后再使用unbindService（）方法，也会使onDestory（）方法得到执行。当既调用了startService（）又调用了bindService（）则stopService（）和unbindService（）都要调用。
 6. 启动服务：创建->启动->销毁，如果服务已经创建了，后续重复启动，操作的都是同一个服务，不会再重新创建了，除非先销毁它
 7. 服务的生命周期和活动的生命周期没有关系，Activity的生命周期结束了，服务还可以在后台运行，除非是我们自己将服务关闭。
+8. 绑定服务了并不意味着服务就在运行，只有通过startService才能使这个服务运行。
+9. 服务创建只能通过停止服务来销毁，而服务的绑定之后只能通过服务解绑来销毁，解绑时就可以解绑并销毁这个服务。
+10. 绑定服务：如果服务不存在：onCreate->onBind->onUnbind->onDestory
+11. 如果服务已经存在，那么bindService只能使onBind方法调用，而unbindService只能使onUnbind被调用
