--- a/basePoints/Service/2.服务的生命周期.md
+++ b/basePoints/Service/2.服务的生命周期.md
@@ -14,5 +14,5 @@ startService(new Intent(this, MyService.class));
 7. 服务的生命周期和活动的生命周期没有关系，Activity的生命周期结束了，服务还可以在后台运行，除非是我们自己将服务关闭。
 8. 绑定服务了并不意味着服务就在运行，只有通过startService才能使这个服务运行。
 9. 服务创建只能通过停止服务来销毁，而服务的绑定之后只能通过服务解绑来销毁，解绑时就可以解绑并销毁这个服务。
-10. 绑定服务：如果服务不存在：onCreate->onBind->onUnbind->onDestory
+10. 绑定服务：如果服务不存在：onCreate->onBind->onUnbind->onDestory，此时服务没有在后台运行，并且它会随着Activity的摧毁而解绑并销毁
 11. 如果服务已经存在，那么bindService只能使onBind方法调用，而unbindService只能使onUnbind被调用
