--- a/basePoints/Service/3.服务和活动的通信(bind&unbind).md
+++ b/basePoints/Service/3.服务和活动的通信(bind&unbind).md
@@ -74,6 +74,7 @@ public class Service1Activity extends AppCompatActivity implements View.OnClickL
                 Intent intent=new Intent(this,downService.class);
                 //活动与服务通信的方法
                 bindService(intent,connection,BIND_AUTO_CREATE);
+                //BIND_AUTO_CREATE:服务不存在则自动创建
                 break;
             case R.id.unbind_service:
                 unbindService(connection);
