--- a/basePoints/Service/3.服务和活动的通信(bind&unbind).md
+++ b/basePoints/Service/3.服务和活动的通信(bind&unbind).md
@@ -1,3 +1,5 @@
+bind绑定：最大的作用是用来实现对Service执行的任务进行进度调控
+
 1. onBind()方法是用来执行服务做的事，将服务于活动联系在一起。
 2. 以一个下载功能为例
 
@@ -13,6 +15,9 @@ public class downService extends Service {
     public IBinder onBind(Intent intent) {
         return mDownLoadBinder;
     }
+    
+    //对于onBind方法而言，要求返回IBinder对象，实际上，我们会自己定义一个内部类，集成Binder类，并且可以定义自己想用的方法
+    
 //在服务里创建一个下载的binder对象管理下载活动
     public class downLoadBinder extends Binder{
 //开始下载
@@ -82,6 +87,7 @@ public class Service1Activity extends AppCompatActivity implements View.OnClickL
         }
     }
 //ServiceConnection里面的两个方法是用于活动与服务绑定成功与连接断开的时候使用。
+//IBinder：在Android中用于远程操作对象的一个基本接口，里面有很多抽象方法，而Binder是实现了IBinder接口的一个类，使用Binder就不用实现IBinder中的所有方法
     private ServiceConnection connection=new ServiceConnection() {
         @Override
         public void onServiceConnected(ComponentName name, IBinder service) {
